# PashaBibko-Util

./: .gitignore  CMakeLists.txt  CRef_8h_source.html  Colour_8h_source.html  Doxyfile  DoxygenLayout.xml  FileRead_8h_source.html  Log_8h_source.html  Misc_8h_source.html  README.md  ReturnVal_8h_source.html  Todo.md  Util.cpp  Util.h  Util_8h_source.html  Vec_8h_source.html  annotated.html  annotated_dup.js  classPashaBibko_1_1Util_1_1CRef-members.html  classPashaBibko_1_1Util_1_1CRef.html  classPashaBibko_1_1Util_1_1CRef_3_01void_01_4-members.html  classPashaBibko_1_1Util_1_1CRef_3_01void_01_4.html  classPashaBibko_1_1Util_1_1ReturnVal-members.html  classPashaBibko_1_1Util_1_1ReturnVal.html  classes.html  dir_b02e4219757ae4e3a0f1714873865bbf.html  dir_e1d07f0ef60c62b3f4b518ea9d90fe9a.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  menudata.js  namespacePashaBibko.html  namespacePashaBibko_1_1Util.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  navtreedata.js  navtreeindex0.js  (+17 more)
.github/workflows/: build-release.yml  doxygen.yml  release.yml
classes/: CRef.h  ReturnVal.h  Vec.h
code-tests/: AboutTests.md  CMakeLists.txt
code-tests/src/: VecTests.cpp
core/: Colour.h  FileManagment.cpp  FileManagment.h  FileRead.cpp  FileRead.h  Log.cpp  Log.h  Macros.h  Misc.cpp  Misc.h  ReturnVal.cpp  ReturnVal.h  Vec.h
example/: ExampleUse.cpp
extensions/python/: CMakeLists.txt  CTPython.cpp  CTPython.h
extensions/python/ct-generator/: CTGenerator.c  CTGenerator.h  GenerateCppFile.py
extensions/testing/: CMakeLists.txt  PBTestEntry.cpp  PBTestErrors.h  PBTesting.cpp  PBTesting.h
modules/: ConsoleManip.cpp
scripts/: build.bat
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_a.js  (+11 more)
sections/: FileRead.h  Log.h  Misc.h
src/: ConsoleManip.cpp  FileRead.cpp  Log.cpp  Misc.cpp
